<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/uncc_logo"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textStyle="bold">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:textStyle="bold">
    </EditText>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="  Reset  " />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="38dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="@string/login_button" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register_button" />
    <Button
        android:id="@+id/button4"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/button5"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit_button" />

</LinearLayout>