<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/uncc_logo">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Please fill the form to register!"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_weight=".6"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/username_label"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <requestFocus />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/password_label"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/password_verify_label"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/firstName"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/lastName"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/email_label"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="right|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/username_hint"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textStyle="bold">
                </EditText>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/firstName_hint"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/lastName_hint"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/phone_hint"
                    android:textStyle="bold"/>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:textStyle="bold">

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="Accept Agreement" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/reset_button_label"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/register_button_label"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:text="@string/back_button_label"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>